--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@atproto/repo": "^0.3.9",
     "@atproto/syntax": "^0.1.5",
     "@atproto/xrpc-server": "^0.6.4",
+    "@xenova/transformers": "^2.17.2",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.36.1",
     "express": "^4.21.1",
