--- a/.prettierrc
+++ b/.prettierrc
@@ -1,14 +1,6 @@
 {
-  "trailingComma": "all",
-  "tabWidth": 2,
-  "semi": false,
-  "singleQuote": true,
-  "overrides": [
-    {
-      "files": "*.hbs",
-      "options": {
-        "singleQuote": false
-      }
-    }
-  ]
+	"trailingComma": "all",
+	"useTabs": true,
+	"semi": true,
+	"singleQuote": true
 }
