--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"dependencies": {
 		"@anthropic-ai/sdk": "^0.32.1",
 		"@atproto/api": "^0.13.16",
+		"@atproto/identity": "^0.4.3",
 		"@atproto/lexicon": "^0.4.3",
 		"@atproto/repo": "^0.5.5",
 		"@atproto/syntax": "^0.3.1",
