--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@atproto/repo": "^0.5.5",
 		"@atproto/syntax": "^0.3.1",
 		"@atproto/xrpc-server": "^0.6.4",
+		"cookie-parser": "^1.4.7",
 		"dotenv": "^16.4.5",
 		"drizzle-orm": "^0.36.1",
 		"express": "^4.21.1",
