--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"gen:known:dids": "bun run ./src/generate-known-dids.ts",
 		"dev": "tsx src/index.ts",
 		"remove:post": "bun run ./src/remove-post.ts",
+		"remove:unconfirmed:post": "bun run ./src/remove-unconfirmed-posts.ts",
 		"start": "bun run db:migrate && bun run gen:known:dids && node dist/index.js",
 		"db:migrate": "drizzle-kit generate && drizzle-kit migrate",
 		"build": "tsc"
